[package]
name = "vk"
version = "0.1.0"
edition = "2021"
authors = ["JMARyA <jmarya@hydrar.de>"]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["cargo"] }
crossterm = "0.27.0"
dirs = "5.0.1"
html2text = "0.12.5"
moka = { version = "0.12.7", features = ["sync"] }
once_cell = "1.19.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.14"
